--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2"
   },
   "devDependencies": {
